src/objects/Deposit__c.object
<CustomObject>
    <description>Deposit object</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account Number</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <description>Current Balance</description>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Type__c</fullName>
        <label>Deposit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest-bearing Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Market Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate of Deposit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Revenue</description>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12_month_Balance__c</fullName>
        <description>12 month Balance</description>
        <label>12 month Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Deposit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000000000}</displayFormat>
        <label>Deposit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>